feat: alteração de "user" para "cliente" para melhor visibilidade e utilidade do codigo.
- alteração e alinhamentos na page de clientes.jsx, (listagem de clientes)

--- a/frontend/src/css/admin/clientes/Clientes.css
+++ b/frontend/src/css/admin/clientes/Clientes.css
@@ -13,9 +13,10 @@
 
 .clientes-table th,
 .clientes-table td {
-  padding: 22px;
+ padding: 16px 20px;
   text-align: left;
   border-bottom: 1px solid #eee;
+  vertical-align: middle; /* 👈 Garante alinhamento central vertical */
 }
 
 .avatar {
