--- a/frontend/src/css/Sidebar.css
+++ b/frontend/src/css/Sidebar.css
@@ -29,7 +29,7 @@
 }
 
 /* Usuário no rodapé */
-.sidebar-user {
+.sidebar-cliente {
   margin-top: auto; /* empurra usuário para baixo */
   display: flex;
   align-items: center;
@@ -69,13 +69,13 @@
 }
 
 /* Usuário */
-.sidebar-user {
+.sidebar-cliente {
   display: flex;
   align-items: center;
   gap: 10px;
 }
 
-.user-avatar {
+.cliente-avatar {
   width: 36px;
   height: 36px;
   background-color: #00e389;
@@ -87,17 +87,17 @@
   color: black;
 }
 
-.user-info {
+.cliente-info {
   display: flex;
   flex-direction: column;
 }
 
-.user-name {
+.cliente-name {
   margin: 0;
   font-size: 14px;
 }
 
-.user-email {
+.cliente-email {
   margin: 0;
   font-size: 12px;
   color: #a3a3a3;
